--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ header hr {
   display: none;
   margin-top: 1rem;
   font-size: 1.2rem;
-  font-weight: bold
+  font-weight: bold;
+  text-align: center;
 }
 
 .form-container .wrapper {
@@ -129,7 +130,6 @@ form input:focus,
 form select:focus {
   outline: none;
   border: 1px solid #395B40;
-  box-shado;
 }
 
 .input-box {
